--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,7 +1,16 @@
 version: '3'
 services:
+  db:
+    image: mysql:latest
+    restart: always
+    command: --default-authentication-plugin=mysql_native_password
+    env_file:
+      - .env
+    volumes:
+      - ./mysql:/var/lib/mysql
+
   app:
-    image: go-intern:lastest
+    image: meska-app:latest
     build:
       context: ../
       dockerfile: Dockerfile
@@ -9,11 +18,5 @@ services:
       - "9090:9090"
     depends_on:
       - db
-    env_file:
-      - env
-  db:
-    image: mysql:latest
-    restart: always
-    command: --default-authentication-plugin=mysql_native_password
     env_file:
       - .env
