--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -2,12 +2,14 @@ version: '3'
 services:
   db:
     image: mysql:latest
+    container_name: db
     restart: always
-    command: --default-authentication-plugin=mysql_native_password
     env_file:
       - .env
     volumes:
       - ./mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
   app:
     image: meska-app:latest
@@ -20,3 +22,4 @@ services:
       - db
     env_file:
       - .env
+    command: sh -c './wait-for.sh db:3306 -- ./app'
